--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "rm": "^0.1.8"
+    "rm": "^0.1.8",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
