--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.5.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.0.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.0",
