--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "sharp": "^0.33.4"
   },
   "scripts": {
-    "build": "concurrently \"npm run build --prefix frontend\" \"npm run build --prefix backend\"",
-    "start": "concurrently \"npm start --prefix frontend\" \"npm start --prefix backend\"",
-    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\""
-  },
+  "build": "npx concurrently \"npm run build --prefix frontend\" \"npm run build --prefix backend\"",
+  "start": "concurrently \"npm start --prefix frontend\" \"npm start --prefix backend\"",
+  "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\""
+},
 
   "devDependencies": {
     "concurrently": "^9.0.1"
