--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "sharp": "^0.33.4"
   },
   "scripts": {
-  "build": "npx concurrently \"npm run build --prefix frontend\" \"npm run build --prefix backend\"",
-  "start": "concurrently \"npm start --prefix frontend\" \"npm start --prefix backend\"",
+  "build": "npx npm run build --prefix frontend && npx echo 'No build step for backend'",
+  "start": "npx concurrently \"npm start --prefix frontend\" \"npm start --prefix backend\"",
   "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\""
 },
 
