back yo non serverless

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "sharp": "^0.33.4"
   },
   "scripts": {
-    "build": "npm run build --prefix frontend && echo 'No build step for backend'",
+    "build": "npx concurrently \"npm run build --prefix frontend\" \"echo 'No build step for backend'\"",
     "start": "npm start --prefix frontend",
     "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\""
   }
