--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,5 @@
 VITE_BACKEND_URL=http://localhost:3000
+
+MONGODB_CONNECT_URI=mongodb+srv://stewytie:hawk9993@cluster0.g8pm7uj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+PORT=3000
