--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,27 @@
 {
-    "build": {
-      "env": {
-        "NODE_ENV": "production"
+    "version": 2,
+    "builds": [
+      {
+        "src": "frontend/dist/**/*",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "backend/index.js",
+        "use": "@vercel/node"
       }
-    },
+    ],
     "routes": [
       {
         "src": "/api/(.*)",
         "dest": "/backend/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/frontend/dist/$1"
       }
-    ]
+    ],
+    "env": {
+      "MONGODB_CONNECT_URI":"mongodb+srv://stewytie:hawk9993@cluster0.g8pm7uj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+      "PORT":"3000"
+    }
   }
