--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
     "version": 2,
+    "builds": [
+      {
+        "src": "frontend/dist/index.html",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "backend/index.js",
+        "use": "@vercel/node"
+      }
+    ],
     "routes": [
       {
         "src": "/api/(.*)",
