--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
     "version": 2,
     "builds": [
       {
-        "src": "frontend/dist/index.html",
+        "src": "/frontend/dist/index.html",
         "use": "@vercel/static"
       },
       {
-        "src": "backend/index.js",
+        "src": "/backend/index.js",
         "use": "@vercel/node"
       }
     ],
