--- a/vercel.json
+++ b/vercel.json
@@ -10,19 +10,10 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "backend/index.js"
-    },
+  "routes": [,
     {
       "src": "/(.*)",
       "dest": "frontend/index.html"
     }
-  ],
-    "env": {
-      "MONGODB_CONNECT_URI":"mongodb+srv://stewytie:hawk9993@cluster0.g8pm7uj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
-      "PORT":"3000",
-      "VITE_BACKEND_URL=https":"//snapp-mern-stack-qmflx2y8r-rosshds-projects.vercel.app/api"
-    }
+  ]
   }
