--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "build": "react-scripts build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.2",
