--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,11 @@
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "frontend/dist"
-      }
+      "config": { "distDir": "frontend/dist" }
+    },
+    {
+      "src": "backend/package.json",
+      "use": "@vercel/node"
     }
   ]
 }
