--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "scripts": {
-    "build": "npm run build:frontend",
-    "build:frontend": "npm run build --prefix frontend"
+    "build": "npm run build --prefix frontend"
   }
 }
