--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "builds": [
     {
-      "src": "frontend/package.json",
+      "src": "/frontend/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "frontend/dist" }
+      "config": { "distDir": "/frontend/dist" }
     },
     {
       "src": "backend/package.json",
