--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,10 +1,10 @@
 {
   "builds": [
     {
-      "src": "package.json",
+      "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "frontend/dist"
       }
     }
   ]
