--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
