server path fixes

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,7 +5,15 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "frontend/dist"
-      }
+      },
+      "rewrites": [
+        { "source": "/serviceInquiry", "destination": "/" },
+        { "source": "/about", "destination": "/" },
+        { "source": "/gallery", "destination": "/" },
+        { "source": "/comingSoon", "destination": "/" },
+        { "source": "/winder", "destination": "/" },
+        { "source": "/printHub", "destination": "/" }
+      ]
     }
   ]
 }
