--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -8,10 +8,5 @@
       }
     }
   ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
