--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
   "builds": [
     {
-      "src": "/frontend/package.json",
+      "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "/frontend/dist"
+        "distDir": "frontend/dist"
       }
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)", 
+      "destination": "/index.html"
     }
   ]
 }
