--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
-  "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "frontend/dist"
-      }
-    }
-  ],
+  "outputDirectory": "frontend/dist",
   "rewrites": [
     {
       "source": "/(.*)", 
